--- a/package.json
+++ b/package.json
@@ -20,5 +20,16 @@
   "bugs": {
     "url": "https://github.com/kfiguera/platzi-curso-npm/issues"
   },
-  "homepage": "https://github.com/kfiguera/platzi-curso-npm#readme"
+  "homepage": "https://github.com/kfiguera/platzi-curso-npm#readme",
+  "dependencies": {
+    "json-server": "^0.15.0",
+    "moment": "^2.29.1"
+  },
+  "devDependencies": {
+    "date-fns": "^2.27.0",
+    "webpack": "^5.65.0"
+  },
+  "optionalDependencies": {
+    "eslint": "^8.4.1"
+  }
 }
